[package]
name = "backend"
version = "0.1.0"
authors = ["Jay Howard <hello@jaydanhoward.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#
[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["diesel_postgres_pool", "json"]

[dependencies]
rocket = "0.4.2"
serde = "1.0.104"
bcrypt = "0.6.1"
serde_derive = "1.0.104"
diesel = { version = "1.4.6", features = ["postgres"]  }
dotenv = "0.9.0"
r2d2 = "0.8.8"
r2d2-diesel = "1.0.0"
r2d2_postgres = "0.16.0"
frank_jwt = "3.1.2"
serde_json = "1.0.45"
